# SelfFlow

./: README.md
ros2_pkg/: CMakeLists.txt  package.xml
ros2_pkg/msg/: pub.msg  test.msg
ros2_pkg/src/: .task_queue.cpp.swp  CmakeLists.txt.add  ability.cpp  agentX.cpp  confidence.cpp  task_loader.cpp  task_queue.cpp  test.cpp  utility.cpp
self_flow/: CMakeLists.txt  package.xml
self_flow/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
self_flow/install/self_flow/include/self_flow/msg/: bid.h  bid.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  task.h  task.hpp
self_flow/install/self_flow/include/self_flow/msg/detail/: bid__builder.hpp  bid__functions.c  bid__functions.h  bid__rosidl_typesupport_fastrtps_c.h  bid__rosidl_typesupport_fastrtps_cpp.hpp  bid__rosidl_typesupport_introspection_c.h  bid__rosidl_typesupport_introspection_cpp.hpp  bid__struct.h  bid__struct.hpp  bid__traits.hpp  bid__type_support.c  bid__type_support.cpp  bid__type_support.h  task__builder.hpp  task__functions.c  task__functions.h  task__rosidl_typesupport_fastrtps_c.h  task__rosidl_typesupport_fastrtps_cpp.hpp  task__rosidl_typesupport_introspection_c.h  task__rosidl_typesupport_introspection_cpp.hpp  task__struct.h  task__struct.hpp  task__traits.hpp  task__type_support.c  task__type_support.cpp  task__type_support.h
self_flow/install/self_flow/lib/self_flow/: start_agent
self_flow/install/self_flow/share/ament_index/resource_index/parent_prefix_path/: self_flow
self_flow/install/self_flow/share/ament_index/resource_index/rosidl_interfaces/: self_flow
self_flow/install/self_flow/share/self_flow/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
self_flow/install/self_flow/share/self_flow/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  self_flowConfig.cmake  self_flow__rosidl_generator_cExport-noconfig.cmake  self_flow__rosidl_generator_cExport.cmake  self_flow__rosidl_generator_cppExport.cmake  self_flow__rosidl_typesupport_cExport-noconfig.cmake  self_flow__rosidl_typesupport_cExport.cmake  self_flow__rosidl_typesupport_cppExport-noconfig.cmake  self_flow__rosidl_typesupport_cppExport.cmake  self_flow__rosidl_typesupport_introspection_cExport-noconfig.cmake  self_flow__rosidl_typesupport_introspection_cExport.cmake  self_flow__rosidl_typesupport_introspection_cppExport-noconfig.cmake  self_flow__rosidl_typesupport_introspection_cppExport.cmake
self_flow/install/self_flow/share/self_flow/launch/: multi-robot_launch.py  turtlebot3_agent.launch.py
self_flow/install/self_flow/share/self_flow/launch/OLD/: slam_launch.py
self_flow/install/self_flow/share/self_flow/models/turtlebot3_agent0/: model.sdf
self_flow/install/self_flow/share/self_flow/models/turtlebot3_agent1/: model.config
self_flow/install/self_flow/share/self_flow/msg/: Bid.idl  Bid.msg  Task.idl  Task.msg
self_flow/install/self_flow/share/self_flow/worlds/: test.model
self_flow/launch/: custom_bringup.launch.py  multi-robot_launch.py  multi_tb3_simulation_launch.py  my_params.yaml  nav2_params.yaml  nav2_simulation_launch.py  nav2_simulation_launch.py.bak  turtlebot3_agent.launch.py  turtlebot3_agent.launch.py.bak  turtlebot3_agent_ns.launch.py  turtlebot3_world.launch.py  waffle.yaml
self_flow/launch/OLD/: amcl.launch.py  nav2_simulation_launch.py  turtlebot3_agent.launch.py
self_flow/maps/: house.yaml
self_flow/models/maze/: model.config  model.sdf
self_flow/models/turtlebot3_agent0/: model.config  model.sdf
self_flow/models/turtlebot3_agent1/: model.sdf
self_flow/msg/: Common.msg  Task.msg  TaskAssign.msg  TaskAuction.msg  TaskBid.msg
self_flow/rviz/: self_flow.rviz
self_flow/src/: ActionServerExample.cpp  Agent.cpp  AgentPositionTracker.cpp  Requisite.hpp  Start.cpp  TaskStatus.hpp  agentX.cpp  base_task.cpp  base_task.hpp  example_task.cpp  example_task2.cpp  find_object.cpp  find_object_task.cpp  home_task.cpp  idle_task.cpp  position.hpp  requisite.cpp  task_base.cpp  tasklist.h  tasklist.h.bak  test.cpp  utility.cpp
self_flow/worlds/: test_ns.model
self_flow_core/: CMakeLists.txt  package.xml
self_flow_core/msg/: Task.msg
self_flow_core/owl/: SelfFlow.owl
self_flow_core/src/: Agent.cpp  TaskList.hpp  request_position.cpp
self_flow_core/tasks/: base.task  find_object.task  home.task  home_test.task  idle.task  interact.task  interact_assist.task  map.task  moveto_coordinate.task
self_flow_navigation/: CMakeLists.txt  package.xml
self_flow_navigation/launch/: multi_tb3_simulation_launch.py  tb3_simulation_launch.py  test_launch.py
self_flow_navigation/maps/: house.pgm  map.pgm  map.yaml
self_flow_navigation/models/maze/: model.config  model.sdf
self_flow_navigation/rviz/: self_flow.rviz
self_flow_navigation/src/: AgentPositionTracker.cpp  position.hpp
self_flow_navigation/worlds/: house.model  house_empty.model  house_ns.model  maze.model
self_flow_ontology/: package.xml  setup.cfg  setup.py
self_flow_ontology/owl/: SelfFlow.owl  catalog-v001.xml
self_flow_ontology/self_flow_ontology/: ontology.py
self_flow_ontology/src/: ontology.py
selfflow/: CMakeLists.txt  package.xml
selfflow/msg/: Taskdata.msg
selfflow/src/: ability.cpp  agentX.cpp  confidence.cpp  tasklist.h  utility.cpp
src/: agentX.cpp  task_loader.cpp  tasklist.h  utility.cpp
(+1 files in other folders)
